# msw-io

./: .copier-answers.yml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  renovate.json  sitemap.xml
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  docs.yml  release.yml  renovate.yml
api/: index.html
concepts/: index.html
docs/: api.md  concepts.md  getting_started.md  index.md
getting_started/: index.html
search/: search_index.json
src/msw_io/: __init__.py  io.py
src/msw_io/namespace/: __init__.py  msw_files.py  paths.py
src/msw_io/readers/: __init__.py  alignment.py  batch.py  files.py  namespace.py  session.py  validate.py
src/murineshiftwork/io/: __init__.py
src/murineshiftwork/namespace/: __init__.py  manifest.py  metadata_registry.py  msw_files.py  namespace.msw.yaml  paths.py  spec.py
src/murineshiftwork/readers/: __init__.py  alignment.py  batch.py  camera.py  container.py  files.py  models.py  namespace.py  session.py  validate.py
tests/: test_acquisition_provenance.py  test_alignment_unit.py  test_camera_acquisition.py  test_container_reconcile.py  test_ephys_barcode_alignment.py  test_files_loaders.py  test_io_codec.py  test_manifest_writers.py  test_metadata_registry.py  test_msw_files.py  test_namespace.py  test_namespace_builder.py  test_namespace_readiness.py  test_rce_barcode_alignment.py  test_reader_batch.py  test_reader_dispatch.py  test_reader_fixtures.py  test_reader_interface_parity.py  test_reader_manifest_metadata.py  test_reader_session_format.py  test_reader_task_fixtures.py  test_reader_v2.py  test_reader_v42_fixtures.py  test_readers_session.py  test_readers_validate.py  test_session_level_metadata.py  test_subject_manifest.py  test_validate_failpaths.py  test_version.py
tests/data/fixture_v4/: _test_subject__20260617_143022_000001__msw.msw.session.yaml
tests/data/fixture_v42/_test_subject__20260619_120000_000000/: session_manifest.yaml
tests/data/fixture_v42/_test_subject__20260619_120000_000000/_test_subject__20260619_120000_000000__sequence__v1/: _test_subject__20260619_120000_000000__sequence__v1.msw.df.jsonl  _test_subject__20260619_120000_000000__sequence__v1.msw.session.yaml  acquisition_manifest.yaml
tests/data/v42_fs/s1__20260620_165141_069484/: session_manifest.yaml
tests/data/v42_fs/s1__20260620_165141_069484/s1__20260620_165141_069484__probabilistic_switching_fixedsubjects__v1/: acquisition_manifest.yaml  s1__20260620_165141_069484__probabilistic_switching_fixedsubjects__v1.msw.df.jsonl
tests/data/v42_seq/s1__20260620_165526_116840/: session_manifest.yaml
tests/data/v42_seq/s1__20260620_165526_116840/s1__20260620_165526_116840__sequence__v1/: acquisition_manifest.yaml  s1__20260620_165526_116840__sequence__v1.msw.df.jsonl  s1__20260620_165526_116840__sequence__v1.msw.session.yaml
