[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "msw-io"
dynamic = ["version"]
description = "Murine Shift Work session data IO: file codec, namespace utilities, and session readers."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Lars B. Rollik", email = "lars@rollik.me" },
]
requires-python = ">=3.10"
dependencies = [
    "acquisition-namespace>=1.2.2",
    "ttl-barcoder>=0.4.1",
    "numpy",
    "pandas",
    "pydantic>=2.0",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "commitizen",
    "pytest>=8",
    "pytest-cov",
    "pre-commit",
    "mypy",
    "types-PyYAML",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/msw_io/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/msw_io"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/msw_io --durations=0"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "N", "UP", "SIM", "PTH"]
ignore = ["E501", "B017", "N817"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
warn_return_any = false
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Commitizen
# ---------------------------------------------------------------------------

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "commitizen"
version = "0.4.0"
tag_format = "v$version"
update_changelog_on_bump = false
